[gd_scene load_steps=4 format=3 uid="uid://ccxfw1prtf0pr"]

[ext_resource type="SpriteFrames" uid="uid://drymo5cd0gf1j" path="res://sprites/dogs/spriteframes/samoyed-dog.tres" id="1_6u7qu"]
[ext_resource type="Script" uid="uid://dfbd7b3cnmibq" path="res://scenes/fish-capture/dog_fisher.gd" id="1_x7qcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7qcm"]
size = Vector2(20, 11.25)

[node name="Dog" type="CharacterBody2D"]
z_index = 3
texture_filter = 1
script = ExtResource("1_x7qcm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2.5)
rotation = -3.1415925
scale = Vector2(1, -0.8)
shape = SubResource("RectangleShape2D_x7qcm")

[node name="DogAnimations" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_6u7qu")
animation = &"sit-right"

[node name="StringLine" type="Line2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
points = PackedVector2Array(0, 0, 0, 48)
width = 1.0
begin_cap_mode = 1
end_cap_mode = 1

[node name="StringTip" type="Polygon2D" parent="."]
visible = false
z_index = 2
color = Color(0.6, 0.6, 0.6, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
